--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Craete new question</h1>
 
-<form action="/tests/:test_id/questions" method="post"> 
+<form action="<%= test_questions_path(@question.test_id) %>" method="post"> 
 
   <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 
