--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit <%= @question.id %> question</h1>
+<h1><%= question_header(@question) %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', test_questions_path(@question.test_id) %>
+<p><%= link_to 'Back', test_questions_path(@question.test_id) %></p>
