--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -2,6 +2,7 @@
 
   <%= render '/shared/errors', resource: @question %>
   
+  <h1><%= question_header(@question) %></h1>
 
   <p>
     <%= form.label :body %><br>
