--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -12,7 +12,9 @@
 <%= link_to 'Edit', edit_test_path(@test) %>
 
 
-<h3>Tricky questions</h3>
+<h2>Tricky questions</h2>
+
+<%= link_to 'New question', new_test_question_path(@test) %>
 
 <table>
   <tr>
