--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,3 @@
-<h1><%= question_header(@question) %></h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Back', test_questions_path %>
+<%= link_to 'Back', tests_path %>
