--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,4 +2,4 @@
 
 <%= link_to 'Signup', signup_path %>
 <%= link_to 'Login', login_path %> 
-<%= link_to 'Logout', session.clear %>
+<%= link_to 'Logout', logout_path %>
