--- a/app/assets/stylesheets/admin_nav.scss
+++ b/app/assets/stylesheets/admin_nav.scss
@@ -3,7 +3,7 @@
   padding: 15px;
   line-height: 35px;
   color: #ffffff;
-  backgrounf-color: #4293e6;
+  background-color: #4293e6;
   margin-bottom: 40px;
 }
 
@@ -16,11 +16,11 @@
   float: right;
 }
 
-nav-admin.user-email {
+.nav.user-email {
   text-decoration: underline;
 }
 
-nav.nav-admin 
+.nav.nav-admin 
 a {
   color: #ffffff;  
 }
