--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
 
   <body>
     <% if user_signed_in? %>
-      <p class="nav user">
+      <div class="nav user">
         Welcome. <b><%= current_user.email %></b> Guru |
         <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-      </p>
+      </div>
     <%end%>
 
     <%= render 'shared/flash' %>
