--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to <%= link_to 'TESTGURU', tests_path %> </h1>
 
-<%= link_to 'Signup', signup_path %>
+<%= link_to 'Signup', sign_up_path %>
 <%= link_to 'Login', login_path %> 
 <%= link_to 'Logout', logout_path %>
