--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Passing the <%= @test_passage.test.title %> Test</h1>
+<h1><%= t('.current_test', title: @test_passage.test.title) %></h1>
 
 <b>
   <p><%= @test_passage.current_question.body %></p>
@@ -11,8 +11,14 @@
       <%= b.label %>
     </p>
   <% end %>
-  <p><%= form.submit 'Next'%></p>
+  <p><%= form.submit t('.next')%></p>
 <% end %>
 
-<p><%= "Количество вопросов теста - #{@test_passage.count_of_questions}" %></p>
-<p><%= "Номер текущего вопроса теста - #{@test_passage.number_of_question}" %></p>
+<p>
+  <b>
+    <%= t('.question_num') %>
+    <%= @test_passage.number_of_question %>
+    <%= t('.from') %>
+    <%= @test_passage.count_of_questions %>
+  </b>
+</p>
