--- a/app/views/admin/answers/new.html.erb
+++ b/app/views/admin/answers/new.html.erb
@@ -1,6 +1,8 @@
-<h1>New Answer</h1>
+<h1><%= t('.header') %></h1>
 
-<%= @question.body %>
+<p>
+  <%= @question.body %>
+</p>
 
 <%= render 'form' %>
-<%= link_to 'Back', admin_question_path(@question) %>
+<%= link_to t('admin.answers.edit.back'), admin_question_path(@question) %>
