--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,17 +1,17 @@
-<h1>Question</h1>
+<h1><%= t('.header') %></h1>
 
-<p> 
-  <%= @answer.question.body %> 
+<p>
+  <%= @answer.question.body %>
 </p>
 
-<p> 
-  <b>Answer:</b>
-  <%= @answer.body %> 
+<p>
+  <b><%= t('.answer') %></b>
+  <%= @answer.body %>
 </p>
 
-<p> 
-  <b>Correct:</b>
-  <%= @answer.correct %> 
+<p>
+  <b><%= t('.correct') %></b>
+  <%= @answer.correct %>
 </p>
 
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+<%= link_to t('admin.answers.edit.back'), admin_question_path(@answer.question) %>
