--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -1,11 +1,10 @@
 <tr>
   <td><%= question.body %></td><br>
-  <td><%= link_to 'Edit', edit_admin_question_path(question) %></td>
-  <td><%= link_to 'Show', admin_question_path(question) %></td>
-  <td>
-    <%= link_to 'Delete',
-                admin_question_path(question),
-                method: :delete,
-                data: { confirm: 'Are you sure?'} %><br>
+  <td><%= link_to t('admin.answers.answer.show'), admin_question_path(question) %></td>
+  <td><%= link_to t('admin.answers.answer.edit'), edit_admin_question_path(question) %></td>
+  <td><%= link_to t('admin.answers.answer.delete'),
+                  admin_question_path(question),
+                  method: :delete,
+                  data: {confirm: t('admin.answers.answer.del_confirm')} %><br>
   </td>
 </tr>
