--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -1,3 +1,4 @@
-<%= render 'form' %>
+<h1><%= t('.header') %></h1>
 
-<%= link_to 'Back', admin_test_path(@question.test) %>
+<%= render 'form' %>
+<%= link_to t('admin.answers.edit.back'), admin_test_path(@question.test) %>
