--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,15 +1,17 @@
+<h1><%= t('.header') %></h1>
+
 <p>
-  <strong>Body:</strong>
+  <strong><%= t('.body') %></strong>
   <%= @question.body %>
 </p>
 
-<h2>Answers</h2>
+<h2><%= t('.answers') %></h2>
 
-<%= link_to 'New answer', new_admin_question_answer_path(@question) %>
+<%= link_to t('admin.answers.new.header'), new_admin_question_answer_path(@question) %>
 
 <ul>
   <%= render @question.answers %> 
 </ul>
 
-<%= link_to 'Edit', edit_admin_question_path(@question) %>
-<%= link_to 'Back', admin_test_path(@question.test) %>
+<%= link_to t('.edit_question'), edit_admin_question_path(@question) %> |
+<%= link_to t('admin.answers.edit.back'), admin_test_path(@question.test) %>
