--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,22 +1,22 @@
-<h2>Test</h2>
+<h2><%= t('.test') %></h2>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= t('.title') %></strong>
   <%= @test.title %>
 </p>
 
 <p>
-  <strong>Level:</strong>
+  <strong><%= t('.level') %></strong>
   <%= @test.level %>
 </p>
 
-<%= link_to 'Back', admin_tests_path %>
-<%= link_to 'Edit', edit_admin_test_path(@test) %>
+<%= link_to t('.edit_test'), edit_admin_test_path(@test) %> |
+<%= link_to t('admin.answers.edit.back'), admin_tests_path %>
 
 
-<h2>Tricky questions</h2>
+<h2><%= t('admin.questions.show.message') %> </h2>
 
-<%= link_to 'New question', new_admin_test_question_path(@test) %>
+<%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
 
 <ol>
   <%= render @test.questions %>
