--- a/app/views/shared/_admin_nav.html.erb
+++ b/app/views/shared/_admin_nav.html.erb
@@ -1,8 +1,8 @@
 <div class="nav nav-admin">
-  <span class="nav-admin title">TestGuru Admin panel</span>
+  <span class="nav-admin title"><%= t('shared.admin_nav.message') %></span>
 
   <div class="nav-admin user">
-    Welcome, <b class="nav-admin user-email"><%= current_user.email %></b> Guru |
-    <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+    <%= t('shared.admin_nav.welcome') %><b class="nav-admin user-email"><%= current_user.email %></b> <%= t('shared.admin_nav.name') %> |
+    <%= link_to t('shared.admin_nav.logout'), destroy_user_session_path, method: :delete %>
   </div>
 </div>
