--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,17 @@
-<footer>
-  <p>
-    <%= footer_current_year %>
-  </p>
+<div class="card text-center">
+  <div class="card-body">
+    <footer>
+      <p>
+        <%= footer_current_year %>
+      </p>
 
-  <p>
-    <%= github_url("agibalovsu", "Rails") %>
-  </p>
+      <p>
+        <%= github_url("agibalovsu", "Rails") %>
+      </p>
 
-  <p>
-    <%= link_to "Учебный проект в онлайн-школе Thinknetica", 'https://thinknetica.com/', target: :_blank %>
-  </p>
-</footer>
+      <p>
+        <%= link_to "Учебный проект в онлайн-школе Thinknetica", 'https://thinknetica.com/', target: :_blank %>
+      </p>
+    </footer>
+  </div>
+</div>
