--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,23 +1,22 @@
 <%= form_with model: [:admin, @test], local: true do |form| %>
+<%= render 'shared/errors', resource: @test %>
 
-  <%= render 'shared/errors', resource: @test %>
+  <div class="form-group">
+    <p>
+      <%= form.label :title %><br>
+      <%= form.text_field :title, id: :test_title, class: 'form-control' %>
+    </p>
 
-  <p>
-    <%= form.label :title %><br>
-    <%= form.text_field :title, id: :test_title %>
-  </p>
+    <p>
+      <%= form.label :level %><br>
+      <%= form.number_field :level, id: :test_level, class: 'form-control' %>
+    </p> 
 
-  <p>
-    <%= form.label :level %><br>
-    <%= form.number_field :level, id: :test_level %>
-  </p> 
-
-  <p>
-    <%= form.label :category_id %>:
-    <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
-  </p>
-
-  <p><%= form.submit %></p>
-
+    <p>
+      <%= form.label :category_id %>:
+      <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true, class: 'custom-select' %>
+    </p>
+    <%= form.submit t('admin.tests.index.new_test'), class: 'btn btn-primary'%>
+  </div>
 <% end %>
 
