--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,17 +1,19 @@
-<h1><%= t('.header') %></h1>
-
-<p>
-  <%= link_to t('.new_test'), new_admin_test_path %>
-</p>
-
-<table>
-  <tr>
-    <th><%= t('tests.index.title') %></th> 
-    <th><%= t('tests.index.level') %></th>
-    <th><%= t('tests.index.quest_count') %></th>
-    <th colspan="3"><%= t('tests.index.actions') %></th> 
-  </tr>
-
-  <%= render @tests %>
-</table>
+<div class="row justify-content-center mt-3">
+  <div class="col col-md-4"><h1><%= t('.header') %></h1></div>
+    <div class="col-10">
+      <p>
+        <%= link_to t('.new_test'), new_admin_test_path %>
+      </p>
+      <table class="table table-striped">
+        <tr>
+          <th><%= t('tests.index.title') %></th> 
+          <th><%= t('tests.index.level') %></th>
+          <th><%= t('tests.index.quest_count') %></th>
+          <th colspan="3"><%= t('tests.index.actions') %></th> 
+        </tr>
+        <%= render @tests %>
+      </table>
+    </div>
+  </div>
+</div>
 
