--- a/app/views/admin/tests/new.html.erb
+++ b/app/views/admin/tests/new.html.erb
@@ -1,4 +1,12 @@
-<h1><%= t('.new_test') %></h1>
+<div class="row justify-content-center mt-3">
+  <div class="col col-md-4">
+    <h1><%= t('.new_test') %></h1>
+    <div class="card border-primary">
+      <div class="card-body">
+        <%= render 'form' %>
+        <%= link_to t('admin.answers.edit.back'), admin_tests_path %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
-<%= link_to t('admin.answers.edit.back'), admin_tests_path %>
