--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,8 +12,11 @@
 
   <body>
     <%= render 'shared/admin_nav' %>
-    <%= render 'shared/flash' %>
-    <%= yield %> 
+    
+    <div class="container">
+      <%= render 'shared/flash' %>
+      <%= yield %>
+    </div>
   </body>
 
   <%= render '/shared/footer' %>
