--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title><%= t('shared.admin_nav.header') %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,16 +12,12 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <div class="nav user">
-        <%= t('shared.admin_nav.welcome') %><b class="nav-admin user-email"><%= current_user.email %></b> <%= t('shared.admin_nav.name') %> |
-        <%= link_to t('shared.admin_nav.logout'), destroy_user_session_path, method: :delete %>
-      </div>
-    <%end%>
+    <%= render '/shared/app_nav' %>
 
-    <%= render 'shared/flash' %>
-
-    <%= yield %>
+    <div class="container">
+      <%= render 'shared/flash' %>
+      <%= yield %>
+    </div>
 
     <%= render '/shared/footer' %>
   </body>
