--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,9 @@
-<% flash.each do |key, message|%>
-  <%= content_tag :div, message, class: "flash #{key}" %>
-<% end %>
+<div class="row justify-content-center mt-3">
+  <div class="col col-md-4">
+    <% flash.each do |key, message| %>
+      <div class="alert alert_primary" role="alert">
+        <%= message %>
+      </div>
+    <% end %>
+  </div>
+</div>
