--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -2,5 +2,6 @@
   <td><%= test.title %></td>
   <td><%= test_level(test) %></td>
   <td><%= test.questions.count %></td>
-  <td><%= button_to t('.begin'), start_test_path(test) %></td>
+  <td><%= button_to t('.begin'), start_test_path(test), class: 'btn btn-info' %></td>
 </tr>
+
