--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,13 +1,17 @@
-<h1><%= t('tests.index.header') %></h1>
+<div class="row justify-content-center mt-3">
+  <div class="col col-md-4"><h1><%= t('tests.index.header') %></h1></div>
+    <div class="col-10">
+      <table class="table table-striped">
+        <tr>
+          <th><%= t('.title') %></th> 
+          <th><%= t('.level') %></th>
+          <th><%= t('.quest_count') %></th>
+          <th><%= t('.actions') %></th>
+        </tr>
+        <%= render @tests %>
+      </table>
+    </div>
+  </div>
+</div>
 
-<table>
-  <tr>
-    <th><%= t('.title') %></th> 
-    <th><%= t('.level') %></th>
-    <th><%= t('.quest_count') %></th>
-    <th><%= t('.actions') %></th>
-  </tr>
-
-  <%= render @tests %>
-</table>
 
