--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= t('.current_test', title: @test_passage.test.title) %></h1>
 
-<b>
-  <p><%= @test_passage.current_question.body %></p>
-</b>
+<p>
+  <b><%= @test_passage.current_question.body %></b>
+</p>
 
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
   <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b| %>
@@ -11,6 +11,7 @@
       <%= b.label %>
     </p>
   <% end %>
+  <p><%= link_to t('.gist'), gist_test_passage_path(@test_passage), method: :post %></p>
   <p><%= form.submit t('.next')%></p>
 <% end %>
 
