--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -3,7 +3,11 @@
     <div class="col-10">
       <table class="table table-striped">
         <tr>
-          <th><%= t('.title') %></th> 
+          <th class="sort-by-title pointer">
+            <%= t('.title') %>
+            <%= octicon 'arrow-up', class: 'text-success hide' %>
+            <%= octicon 'arrow-down', class: 'text-success hide' %>
+          </th>  
           <th><%= t('.level') %></th>
           <th><%= t('.quest_count') %></th>
           <th><%= t('.actions') %></th>
@@ -15,3 +19,4 @@
 </div>
 
 
+          
