--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -6,7 +6,11 @@
       </p>
       <table class="table table-striped">
         <tr>
-          <th><%= t('tests.index.title') %></th> 
+          <th class="sort-by-title pointer">
+            <%= t('tests.index.title') %>
+            <%= octicon 'arrow-up', class: 'text-success hide' %>
+            <%= octicon 'arrow-down', class: 'text-success hide' %>
+          </th> 
           <th><%= t('tests.index.level') %></th>
           <th><%= t('tests.index.quest_count') %></th>
           <th colspan="3"><%= t('tests.index.actions') %></th> 
