--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -1,4 +1,4 @@
 <h1><%= t('.header') %></h1>
 
 <%= render 'form' %>
-<%= link_to t('admin.quesions.edit.back'), admin_test_path(@test) %>
+<%= link_to t('admin.answers.edit.back'), admin_test_path(@test) %>
