--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -4,6 +4,9 @@
       <p>
         <%= link_to t('.new_test'), new_admin_test_path %>
       </p>
+
+      <%= render 'shared/errors', resource: @test %>
+      
       <table class="table table-striped">
         <tr>
           <th class="sort-by-title pointer">
