--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -4,6 +4,15 @@
   <b><%= @test_passage.current_question.body %></b>
 </p>
 
+<p><%= t('.progress_bar')%></p>
+<div class="progress">
+  <div class="progress-bar" id="progress-bar" data-progress="<%= @test_passage.result %>"
+       aria-valuemax="100">
+    <%= @test_passage.result %>
+  </div>
+</div>
+<br>
+
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
   <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b| %>
     <p>
