--- a/app/views/shared/_app_nav.html.erb
+++ b/app/views/shared/_app_nav.html.erb
@@ -6,8 +6,8 @@
       <%= t('shared.admin_nav.welcome') %><b class="nav-admin user-email"><%= current_user.email %></b> <%= t('shared.admin_nav.name') %> |
       <%= link_to t('shared.admin_nav.logout'), destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to t('shared.admin_nav.sign_in'), new_session_path(resource_name) %> |
-      <%= link_to t('shared.admin_nav.sign_up'), new_registration_path(resource_name) %>
+      <%= link_to t('shared.admin_nav.sign_in'), new_user_session_path %> |
+      <%= link_to t('shared.admin_nav.sign_up'), new_user_registration_path %>
     <%end%>
   </span>
 </app_nav>
