--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,6 +12,9 @@
       <p>
         <%= link_to "Учебный проект в онлайн-школе Thinknetica", 'https://thinknetica.com/', target: :_blank %>
       </p>
+      <p>
+        <%= link_to 'Обратная связь', new_feedback_path %> 
+      </p>
     </footer>
   </div>
 </div>
