add validation readines

--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -4,18 +4,23 @@
   <div class="form-group">
     <p>
       <%= form.label :title %><br>
-      <%= form.text_field :title, id: :test_title, class: 'form-control' %>
+      <%= form.text_field :title, id: :test_title, rows: 7, cols: 60 %>
     </p>
 
     <p>
       <%= form.label :level %><br>
-      <%= form.number_field :level, id: :test_level, class: 'form-control' %>
+      <%= form.number_field :level, id: :test_level, rows: 7, cols: 60 %>
     </p> 
 
     <p>
       <%= form.label :category_id %>:
       <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true, class: 'custom-select' %>
     </p>
+
+    <p>
+    <%= form.label :readiness, t('admin.tests.show.readiness') %>:
+    <%= form.check_box :readiness, id: :test_readiness %>
+  </p>
     
     <%= form.submit t('admin.tests.new.new_test'), class: 'btn btn-primary'%>
   </div>
