--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -10,16 +10,20 @@
   <%= @test.level %>
 </p>
 
+<h2><%= t('admin.questions.show.message') %></h2>
+
 <%= link_to t('.edit_test'), edit_admin_test_path(@test) %> |
-<%= link_to t('admin.answers.edit.back'), admin_tests_path %>
-
-
-<h2><%= t('admin.questions.show.message') %> </h2>
-
 <%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
 
 <ol>
   <%= render @test.questions %>
 </ol>
 
+<p>
+  <b><%= t('admin.tests.show.readiness') %></b>
+  <%= @test.readiness %>
+</p>
+
 <h3> Количество вопросов: <%= @test.questions.count %> </h3>
+
+<%= link_to t('admin.answers.edit.back'), admin_tests_path %>
