--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -18,4 +18,5 @@
                   method: :delete,
                   data: {confirm: t('.del_confirm', title: test.title)} %>
   </td>
+  <td class = "align-middle"><%= test.readiness %></td>
 </tr>
