--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -17,6 +17,7 @@
           <th><%= t('tests.index.level') %></th>
           <th><%= t('tests.index.quest_count') %></th>
           <th colspan="3"><%= t('tests.index.actions') %></th>
+          <th><%= t('admin.tests.show.readiness') %></th>
         </tr>
         <%= render @tests %>
       </table>
