--- a/app/views/shared/_admin_nav.html.erb
+++ b/app/views/shared/_admin_nav.html.erb
@@ -6,6 +6,7 @@
   <span class="navbar-text"> 
     <%= t('shared.admin_nav.welcome') %><b class="nav-admin user-email"><%= current_user.email %></b>  <%= t('shared.admin_nav.name') %> |
     <%= link_to t('admin.gists.index.header'), admin_gists_path %> |
+    <%= link_to t('admin.badges.index.header'), admin_badges_path %> |
     <%= link_to t('shared.admin_nav.logout'), destroy_user_session_path, method: :delete %>
     </span>
   </span>
