--- a/app/views/shared/_app_nav.html.erb
+++ b/app/views/shared/_app_nav.html.erb
@@ -4,6 +4,7 @@
   <span class="navbar-text">
     <% if user_signed_in? %>
       <%= t('shared.admin_nav.welcome') %><b class="nav-admin user-email"><%= current_user.email %></b> <%= t('shared.admin_nav.name') %> |
+      <%= link_to t('admin.badges.index.header'), badges_path %> |
       <%= link_to t('shared.admin_nav.logout'), destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to t('shared.admin_nav.sign_in'), new_user_session_path %> |
